2017-11-28: Travis Finkenauer <tmfink@juniper.net>:

	* edit_dist.c: Include edit_dist.h to pick up forward declaration of
	  edit_distn().
	* engine.cpp (display_result): Initialize before use in case of
	  uncaught exception.
	* filedata.h (class Filedata): Avoid unused variable warning.
	* find-file-size.c: Add function prototypes for find_dev_size() and
	  find_file_size() to keep compiler happy.
	* fuzzy.c (fuzzy_hash_file): Avoid a memory leak.
	* match.cpp (sig_file_close): Fix reversed logic to close handle.

2017-06-01: Tsukasa OI <floss_ssdeep@irq.a4lg.com>:

	* fuzzy.c, sum_table.h: Added many optimizations

2015-04-26: Tsukasa OI <floss_ssdeep@irq.a4lg.com>:

	* fuzzy.c: Fixed some error handling

2015-04-24: Jesse Kornblum <research@jessekornblum.com>:

	* ssdeep.1, NEWS: Updated release date

2015-04-01: Tsukasa OI <floss_ssdeep@irq.a4lg.com>:

	* dig.cpp: Support arbitrary length input from the standard input.

2014-11-07: Tsukasa OI <floss_ssdeep@irq.a4lg.com>:

	* edit_dist.c: Made code more portable
	* fuzzy.c: Multiple bug fixes

2014-10-24: Jesse Kornblum <research@jessekornblum.com>:

	* Makefile.am: Adding edit_dist.h

2014-10-20: Jesse Kornblum <research@jessekornblum.com>:

	* edit_dist.c: Replaced with new, explicitly GPL licensed code.
	* fuzzy.c: Removed edit distance function prototype
	* edit_dist.h: Added edit distance function prototype

2014-10-16: Jesse Kornblum <research@jessekornblum.com>:

	* configure.ac: Version bump to 2.12
	* fuzzy.c: Fixed bug when comparing identical hashes, bug #16.
	* normal.sh: Use multiple cores when compiling

2014-09-26: Jesse Kornblum <research@jessekornblum.com>:

	* Makefile.am: Made libfuzzy compile as a shared library again.

2014-09-09: Jesse Kornblum <research@jessekornblum.com>:

	* fuzzy.c: Fixing edge case bug for signature creation.
	* fuzzy.h: Prevent copying with constructor.

2014-07-23: Jesse Kornblum <research@jessekornblum.com>:
